# se-toolkit-lab-8

./: REPORT.md  docker-compose.yml
backend/app/routers/: items.py
mcp/mcp_observability/: server.py
nanobot/: Dockerfile  config.json  entrypoint.py  pyproject.toml
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
